Fix the error in nn_classifier.ipynb

--- a/nn_classifier.ipynb
+++ b/nn_classifier.ipynb
@@ -14,7 +14,6 @@
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.utils.data.dataset import random_split\n",
-    "from torchtext.datasets import AG_NEWS \n",
     "from torchtext.data.functional import to_map_style_dataset\n",
     "from torchtext.data.utils import get_tokenizer \n",
     "from torchtext.vocab import build_vocab_from_iterator\n",
@@ -29,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ag_news_label = {1: \"askhistorians\", 2: \"writingprompts\", \n",
+    "subreddit_labels = {1: \"askhistorians\", 2: \"writingprompts\", \n",
     "                 3: \"television\", 4: \"explainlikeimfive\", \n",
     "                 5: \"lifeprotips\", 6: \"relationship_advice\",\n",
     "                 7: \"science\", 8: \"books\",\n",
@@ -55,7 +54,7 @@
    "source": [
     "mod_data = []\n",
     "for i in reddit_data:\n",
-    "    title_index = list(ag_news_label.keys())[list(ag_news_label.values()).index(i[2])]\n",
+    "    title_index = list(subreddit_labels.keys())[list(subreddit_labels.values()).index(i[2])]\n",
     "    mod_data.append((title_index, i[1]))\n",
     "    \n",
     "random.shuffle(mod_data)"
@@ -126,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[229, 12, 45, 785, 7, 103, 650]\n"
+      "[212, 12, 44, 1278, 7, 100, 489]\n"
      ]
     }
    ],
@@ -170,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "db226a29",
+   "id": "920dc140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7adf9cd9",
+   "execution_count": 13,
+   "id": "ffe9c0c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "6e95cf18",
+   "execution_count": 14,
+   "id": "ed9d7410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,8 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c563552e",
+   "execution_count": 15,
+   "id": "2d047c19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "f43fbbc5",
+   "execution_count": 16,
+   "id": "b8abc629",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,80 +271,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "f964689a",
+   "execution_count": 17,
+   "id": "336a36c7",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "test.csv: 1.86MB [00:00, 2.38MB/s]                          \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| epoch   1 |   500/ 1688 batches | accuracy    0.448\n",
-      "| epoch   1 |  1000/ 1688 batches | accuracy    0.639\n",
-      "| epoch   1 |  1500/ 1688 batches | accuracy    0.695\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time: 11.55s | valid accuracy    0.722 \n",
+      "| end of epoch   1 | time:  0.11s | valid accuracy    0.322 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   2 |   500/ 1688 batches | accuracy    0.731\n",
-      "| epoch   2 |  1000/ 1688 batches | accuracy    0.744\n",
-      "| epoch   2 |  1500/ 1688 batches | accuracy    0.755\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time: 12.22s | valid accuracy    0.786 \n",
+      "| end of epoch   2 | time:  0.08s | valid accuracy    0.444 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   3 |   500/ 1688 batches | accuracy    0.768\n",
-      "| epoch   3 |  1000/ 1688 batches | accuracy    0.773\n",
-      "| epoch   3 |  1500/ 1688 batches | accuracy    0.779\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time: 11.19s | valid accuracy    0.786 \n",
+      "| end of epoch   3 | time:  0.07s | valid accuracy    0.456 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   4 |   500/ 1688 batches | accuracy    0.785\n",
-      "| epoch   4 |  1000/ 1688 batches | accuracy    0.787\n",
-      "| epoch   4 |  1500/ 1688 batches | accuracy    0.789\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   4 | time: 10.98s | valid accuracy    0.802 \n",
+      "| end of epoch   4 | time:  0.08s | valid accuracy    0.567 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   5 |   500/ 1688 batches | accuracy    0.794\n",
-      "| epoch   5 |  1000/ 1688 batches | accuracy    0.797\n",
-      "| epoch   5 |  1500/ 1688 batches | accuracy    0.792\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   5 | time: 12.76s | valid accuracy    0.792 \n",
+      "| end of epoch   5 | time:  0.08s | valid accuracy    0.567 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   6 |   500/ 1688 batches | accuracy    0.839\n",
-      "| epoch   6 |  1000/ 1688 batches | accuracy    0.840\n",
-      "| epoch   6 |  1500/ 1688 batches | accuracy    0.837\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   6 | time: 11.56s | valid accuracy    0.837 \n",
+      "| end of epoch   6 | time:  0.07s | valid accuracy    0.578 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   7 |   500/ 1688 batches | accuracy    0.845\n",
-      "| epoch   7 |  1000/ 1688 batches | accuracy    0.840\n",
-      "| epoch   7 |  1500/ 1688 batches | accuracy    0.837\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   7 | time: 10.95s | valid accuracy    0.840 \n",
+      "| end of epoch   7 | time:  0.08s | valid accuracy    0.589 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   8 |   500/ 1688 batches | accuracy    0.840\n",
-      "| epoch   8 |  1000/ 1688 batches | accuracy    0.843\n",
-      "| epoch   8 |  1500/ 1688 batches | accuracy    0.844\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   8 | time: 11.41s | valid accuracy    0.836 \n",
+      "| end of epoch   8 | time:  0.09s | valid accuracy    0.633 \n",
       "-----------------------------------------------------------\n",
-      "| epoch   9 |   500/ 1688 batches | accuracy    0.845\n",
-      "| epoch   9 |  1000/ 1688 batches | accuracy    0.845\n",
-      "| epoch   9 |  1500/ 1688 batches | accuracy    0.845\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   9 | time: 13.74s | valid accuracy    0.841 \n",
+      "| end of epoch   9 | time:  0.07s | valid accuracy    0.644 \n",
       "-----------------------------------------------------------\n",
-      "| epoch  10 |   500/ 1688 batches | accuracy    0.843\n",
-      "| epoch  10 |  1000/ 1688 batches | accuracy    0.848\n",
-      "| epoch  10 |  1500/ 1688 batches | accuracy    0.845\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch  10 | time: 11.44s | valid accuracy    0.840 \n",
+      "| end of epoch  10 | time:  0.08s | valid accuracy    0.611 \n",
       "-----------------------------------------------------------\n"
      ]
     }
@@ -355,7 +317,6 @@
     "optimizer = torch.optim.SGD(model.parameters(), lr=LR)\n",
     "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, 1.0, gamma=0.1)\n",
     "total_accu = None \n",
-    "train_iter, test_iter = AG_NEWS()\n",
     "train_dataset = to_map_style_dataset(train_iter)\n",
     "test_dataset = to_map_style_dataset(test_iter)\n",
     "num_train = int(len(train_dataset) * 0.90)\n",
@@ -386,8 +347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "2ec89368",
+   "execution_count": 18,
+   "id": "45118af9",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +356,7 @@
      "output_type": "stream",
      "text": [
       "Checking the results of test dataset.\n",
-      "Test accuracy is: 0.835\n"
+      "Test accuracy is: 0.700\n"
      ]
     }
    ],
@@ -407,8 +368,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "3ea7d4e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a television news\n"
+     ]
+    }
+   ],
+   "source": [
+    "def predict(text, text_pipeline):\n",
+    "    with torch.no_grad():\n",
+    "        text = torch.tensor(text_pipeline(text))\n",
+    "        output = model(text, torch.tensor([0]))\n",
+    "        return output.argmax(1).item() + 1\n",
+    "\n",
+    "ex_text_str = 'Poisoning wells was a common practice in times of war, \\\n",
+    "               but then, at which point the well becomes drinkable again?, \\\n",
+    "               are there well still poisoned from past wars?'\n",
+    "\n",
+    "ex_text_str = 'Carl Jung\\'s concept of the Collective Unconscious is often misunderstood \\\n",
+    "               to be a collective hive consciousness but it was really a hypothesis about \\\n",
+    "               a mental counterpart to DNA by which instinctual structures of the mind are inherited'\n",
+    "\n",
+    "model = model.to(\"cpu\")\n",
+    "\n",
+    "print(\"This is a %s news\" %subreddit_labels[predict(ex_text_str, text_pipeline)])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5681b2f9",
+   "id": "569a661f",
    "metadata": {},
    "outputs": [],
    "source": []
